test/scc/pp/errors/048.a
048.t:2:2: error: unterminated #elif